# Radium

./: .cursorrules  .gitignore  .nxignore  .radiumrc.example  .rustfmt.toml  CLAUDE.md  CLI-ARCHITECTURE-REALITY.md  CLI-TOOL-SUPPORT-FINAL-STATUS.md  CLI-TOOL-SUPPORT-STATUS.md  CRITICAL-CLI-TOOL-ISSUE.md  Cargo.toml  FINAL-ARCHITECTURE-ASSESSMENT.md  GEMINI.md  IMPLEMENTATION-SUMMARY.md  PHASE1-COMPLETION-SUMMARY.md  PHASE1-TESTING.md  PHASE2-STATUS.md  README.md  build_rs_cov.profraw  clippy.toml  install.sh  nx.json  package.json  test_placeholder
apps/cli/: Cargo.toml  project.json
apps/cli/benches/: command_bench.rs  workspace_bench.rs
apps/cli/src/: colors.rs  config.rs  conversation_context.rs  main.rs  policy_engine.rs  session_manager.rs
apps/cli/src/client/: daemon_client.rs  mod.rs  session_manager.rs
apps/cli/src/commands/: agent.rs  agents.rs  agents.rs.bak  auth.rs  autonomous.rs  batch.rs  braingrid.rs  budget.rs  capability.rs  chat.rs  checkpoint.rs  clean.rs  clipboard.rs  code.rs  complete.rs  constitution.rs  context.rs  cost.rs  craft.rs  custom.rs  doctor.rs  engines.rs  event_renderer.rs  (+33 more)
apps/cli/tests/: cli_agents_test.rs  cli_auth_test.rs  cli_autonomous_test.rs  cli_budget_test.rs  cli_chat_test.rs  cli_checkpoint_test.rs  cli_clean_test.rs  cli_complete_test.rs  cli_context_test.rs  cli_craft_test.rs  cli_custom_test.rs  cli_doctor_test.rs  cli_e2e_test.rs  cli_engines_test.rs  cli_extension_test.rs  cli_hooks_test.rs  cli_init_test.rs  cli_learning_test.rs  cli_models_test.rs  cli_monitor_test.rs  cli_plan_test.rs  cli_policy_test.rs  cli_run_test.rs  cli_sandbox_test.rs  cli_stats_test.rs  cli_status_test.rs  cli_step_test.rs  cli_templates_test.rs  cli_vibecheck_test.rs  commands_test.rs  e2e_golden_path.rs  mcp_cli_test.rs  reasoning_effort_test.rs  step_command_test.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/tui/: Cargo.toml  TUI_DAEMON_INTEGRATION.md  project.json
apps/tui/src/: app.rs  chat_executor.rs  command_safety.rs  commands.rs  config.rs  errors.rs  icons.rs  lib.rs  main.rs  navigation.rs  progress_channel.rs  requirement_executor.rs  requirement_progress.rs  session_manager.rs  setup.rs  theme.rs  workspace.rs
apps/tui/tests/: app_test.rs  command_palette_test.rs  common.rs  enhanced_chat_interface_test.rs  enhanced_components_test.rs  integration_test.rs  integration_test.rs.disabled  key_handling_test.rs  orchestration_commands_test.rs  orchestration_enter_key_test.rs  orchestration_integration_test.rs  session_management_test.rs  setup_wizard_integration_test.rs  setup_wizard_test.rs  text_input_test.rs  textarea_integration_test.rs
crates/radium-abstraction/: Cargo.toml  project.json
crates/radium-abstraction/src/: lib.rs
crates/radium-core/: Cargo.toml  build.rs  project.json
crates/radium-core/benches/: context_files_bench.rs  extension_benchmarks.rs  hooks_benchmark.rs  privacy_bench.rs
crates/radium-core/proto/: radium.proto
crates/radium-core/src/: client.rs  error.rs  lib.rs  main.rs
crates/radium-core/tests/: agent_config_integration_test.rs  agent_crud_test.rs  agent_delegation_e2e_test.rs  agent_discovery_integration_test.rs  agent_metadata_integration_test.rs  agent_metadata_test.rs  agent_registry_advanced_test.rs  agent_registry_integration_test.rs  analytics_code_changes_test.rs  analytics_report_test.rs  analytics_session_test.rs  analytics_storage_test.rs  autonomous_planning_test.rs  checkpoint_integration_test.rs  code_blocks_integration_test.rs  collaboration_e2e_test.rs  collaboration_test.rs  context_files_e2e_test.rs  context_files_integration_test.rs  context_sources_integration_test.rs  conversation_history_integration_test.rs  custom_commands_integration_test.rs  dag_dependency_test.rs  e2e_vibe_check_learning_test.rs  e2e_vibe_check_learning_test.rs.disabled  engine_integration_test.rs  executor_integration_test.rs  extension_agent_prompt_integration_test.rs  extension_archive_test.rs  extension_command_integration_test.rs  extension_conflict_test.rs  extension_discovery_integration_test.rs  extension_e2e_test.rs  extension_installer_edge_cases_test.rs  extension_integration_test.rs  extension_load_test.rs  extension_manifest_edge_cases_test.rs  extension_marketplace_test.rs  extension_mcp_integration_test.rs  extension_security_test.rs  (+56 more)
crates/radium-models/: Cargo.toml  README.md  project.json
crates/radium-models/src/: claude.rs  factory.rs  gemini.rs  lib.rs  ollama.rs  openai.rs  universal.rs
crates/radium-models/tests/: context_cache_claude_test.rs  context_cache_gemini_test.rs  context_cache_integration_test.rs  context_cache_openai_test.rs  extended_params_integration_test.rs  gemini_code_execution_test.rs  gemini_integration_test.rs  integration_test.rs  ollama_integration_test.rs  openai_integration_test.rs  schema_validation_e2e_test.rs  streaming_integration_test.rs  universal_integration_test.rs
crates/radium-orchestrator/: Cargo.toml  project.json
crates/radium-orchestrator/benches/: PERFORMANCE_RESULTS.md  orchestration_benchmark.rs
crates/radium-orchestrator/src/: batch_executor.rs  dispatcher.rs  error.rs  executor.rs  lib.rs  lifecycle.rs  load_balancer.rs  plugin.rs  progress.rs  queue.rs  registry.rs  selector.rs
crates/radium-orchestrator/tests/: budget_failover_integration_test.rs  cli_tui_parity_test.rs  dev_loop_integration_test.rs  failover_integration_test.rs  function_calling_integration_test.rs  mcp_tool_execution_test.rs  multi_agent_integration_test.rs  orchestration_context_test.rs  orchestration_e2e_test.rs  orchestration_file_ops_test.rs  orchestration_hooks_test.rs  provider_integration_test.rs  routing_accuracy_test.md  types_test.rs
crates/radium-training/: Cargo.toml
crates/radium-training/src/: artifacts.rs  builders.rs  dataset.rs  error.rs  job.rs  layout.rs  lib.rs  progress.rs  registry.rs  trainer.rs
crates/radium-workflow/: Cargo.toml
examples/hooks/metrics-hook/: Cargo.toml  README.md
examples/hooks/tutorial-hook/: Cargo.toml  README.md
examples/hooks/validation-hook/: Cargo.toml  README.md
(+1686 files in other folders)
