[package]
name = "radium-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = { level = 'warn', priority = -1 }
pedantic = { level = 'warn', priority = -1 }
nursery = { level = 'warn', priority = -1 }
module_name_repetitions = 'allow'
must_use_candidate = 'allow'
missing_const_for_fn = 'allow'
doc_markdown = 'allow'
similar_names = 'allow'
redundant_pub_crate = 'allow'
uninlined_format_args = 'allow'
use_self = 'allow'
derive_partial_eq_without_eq = 'allow'
cast_sign_loss = 'allow'
cast_possible_truncation = 'allow'
manual_string_new = 'allow'
significant_drop_tightening = 'allow'
option_if_let_else = 'allow'
explicit_auto_deref = 'allow'
missing_errors_doc = 'allow'
missing_panics_doc = 'allow'
redundant_closure = 'allow'
future_not_send = 'allow'
default_trait_access = 'allow'
too_many_lines = 'allow'

[dependencies]
# gRPC
tonic.workspace = true

# Async runtime
tokio.workspace = true

# Internal crates
radium-core.workspace = true
radium-models.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap.workspace = true
inquire = "0.7"
tabled = "0.15"
colored = "2.1"

# Error handling
anyhow.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.8"
