[package]
name = "radium-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Radium Terminal User Interface"

[lib]
name = "radium_tui"
path = "src/lib.rs"

[[bin]]
name = "radium-tui"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"
tachyonfx = { version = "0.21", features = ["crossterm", "dsl"] }

# gRPC
tonic.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true
futures = "0.3"

# HTTP client for credential validation
reqwest = { version = "0.12", features = ["json"] }

# Internal crates
radium-core = { workspace = true, features = ["monitoring", "workflow", "mcp-progress", "orchestrator-integration", "syntax", "tui-theme"] }
radium-models.workspace = true
radium-abstraction.workspace = true
radium-orchestrator.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true

# CLI argument parsing
clap.workspace = true

# Time formatting for debug files
chrono = { version = "0.4", features = ["serde"] }

# JSON parsing for chat history
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# TOML config parsing
toml = "0.8"

# Home directory detection
dirs = "5.0"

# Enhanced input handling
tui-input = "0.8"
unicode-width = "0.1"
textwrap = "0.16"
fuzzy-matcher = "0.3"  # For command palette

# Syntax highlighting
syntect = "5.3"

# Regex for command pattern matching
regex = "1.10"

[dev-dependencies]
tempfile = "3.8"
