[package]
name = "radium-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# gRPC
tonic.workspace = true
tonic-web.workspace = true
prost.workspace = true
tower = { workspace = true, features = ["full"] }
http = "1.1.0"
hyper = { version = "1.3.1", features = ["full"] }
http-body = "1.0.0"

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
serde_yaml = "0.9"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde-human-readable", "formatting", "parsing", "macros"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Internal crates
radium-abstraction.workspace = true
radium-models.workspace = true
radium-orchestrator.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
assert_cmd.workspace = true
predicates.workspace = true
bytes = "1.7"
http-body-util = "0.1"
tempfile = "3.8"
