[package]
name = "radium-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["docker-sandbox", "seatbelt-sandbox", "monitoring"]
docker-sandbox = []
podman-sandbox = []
seatbelt-sandbox = []
orchestrator-integration = []
workflow = ["radium-orchestrator", "orchestrator-integration", "mcp-progress"]
monitoring = []
mcp-progress = ["indicatif"]
server = []
http = []
syntax = []  # Syntax highlighting support
tui-theme = ["syntax", "ratatui"]  # TUI-specific theme loading with ratatui

[dependencies]
# gRPC
tonic.workspace = true
tonic-web.workspace = true
prost.workspace = true
tower = { workspace = true, features = ["full"] }
http = "1.1.0"
hyper = { version = "1.3.1", features = ["full"] }
http-body = "1.0.0"

# Async runtime
tokio.workspace = true
tokio-stream = "0.1"
futures = "0.3"
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
serde_yaml = "0.9"
csv = "1.3"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde-human-readable", "formatting", "parsing", "macros"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# String similarity for fuzzy search
strsim = "0.11"

# Database
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Pattern matching
glob = "0.3"
regex = "1.10"
once_cell = "1.19"

# Archive support
flate2 = "1.0"
tar = "0.4"

# HTTP client for MCP transports
reqwest = { version = "0.12", features = ["json", "stream", "blocking", "multipart"] }

# HTTP utilities for proxy server
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

# Progress indicators (optional, for CLI usage)
indicatif = { version = "0.17", optional = true }

# URL encoding
urlencoding = "2.1"

# Semantic versioning
semver = "1.0"

# Cryptographic signing
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

# Hashing for API key IDs
sha2 = "0.10"

# Cryptographic operations for secret management
aes-gcm = "0.10"
pbkdf2 = "0.12"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
base64 = "0.22"

# Temporary files
tempfile = "3.8"

# Graph algorithms
petgraph = "0.6"

# File watching
notify = "6.1"

# Directory walking
walkdir = "2.4"
ignore = "0.4"
grep-searcher = "0.1"
grep-matcher = "0.1"
grep-regex = "0.1"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"

# Clipboard operations (cross-platform)
arboard = "3.3"

# Syntax highlighting
syntect = "5.3"
ratatui = { version = "0.29", optional = true }

# Internal crates
radium-abstraction.workspace = true
radium-models.workspace = true
radium-training.workspace = true
radium-orchestrator = { workspace = true, optional = true }

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
assert_cmd.workspace = true
predicates.workspace = true
bytes = "1.7"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "hooks_benchmark"
harness = false

[[bench]]
name = "context_files_bench"
harness = false

[[bench]]
name = "privacy_bench"
harness = false
