[package]
name = "radium-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# Internal crates
radium-abstraction.workspace = true
radium-core.workspace = true
radium-models.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml = "0.8"

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait.workspace = true

# Logging
tracing.workspace = true

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Base64 encoding/decoding
base64 = "0.22"

# Futures utilities
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "orchestration_benchmark"
harness = false
