[package]
name = "radium-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# Internal crates
radium-abstraction.workspace = true
radium-models.workspace = true

# Async runtime
tokio.workspace = true
tokio-util = "0.7"

# Serialization
serde.workspace = true
serde_json.workspace = true
toml = "0.8"

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait.workspace = true

# Logging
tracing.workspace = true

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Base64 encoding/decoding
base64 = "0.22"

# Futures utilities
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Random number generation for A/B testing
rand = "0.8"

# Regular expressions for code analysis
regex = "1.10"
# Search dependencies
ignore = "0.4"
grep-searcher = "0.1"
grep-regex = "0.1"
glob = "0.3"
# Tree-sitter for AST analysis  
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.4"
tree-sitter-typescript = "0.23"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
radium-core = { workspace = true, features = ["monitoring"] }

[[bench]]
name = "orchestration_benchmark"
harness = false
