[package]
name = "radium-desktop"
version = "0.1.0"
edition = "2021"
description = "Radium Desktop Application"
authors = ["Unicorn <hello@unicorn.love>"]
license = "MIT"

[lib]
name = "radium_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# gRPC client
tonic = "0.13"
tokio = { version = "1", features = ["full"] }

# Internal crates
radium-core = { path = "../../../crates/radium-core" }

# Logging
tracing = "0.1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
